--- a/frontend/src/app/usuario/edit-usuario/edit-usuario.component.html
+++ b/frontend/src/app/usuario/edit-usuario/edit-usuario.component.html
@@ -1,4 +1,4 @@
-<div class="container col-md-6">
+<div class="container col-auto">
     <div class="row">
         <div class="col">
             <div class="card my-4">
