--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,22 +7,22 @@
         <div *ngIf="localStorage.getItem('user')" class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
                 <li *ngIf="isAdmin" class="nav-item">
-                    <a class="nav-link" routerLink="user/solicitudes">Solicitudes de roles</a>
+                    <a class="nav-link" routerLink="admin/solicitudes">Solicitudes de roles</a>
                 </li>
                 <li *ngIf="isUser" class="nav-item">
                     <a class="nav-link" routerLink="proyecto/list">Proyectos</a>
                 </li>
-                <li class="nav-item">
+                <li *ngIf="isUser" class="nav-item">
                     <a class="nav-link" routerLink="recordatorio/list">Recordatorios</a>
                 </li>
                 <li *ngIf="isUser" class="nav-item">
                     <a class="nav-link" routerLink="categoria/list">Categorias</a>
                 </li>
                 <li *ngIf="isEditor" class="nav-item">
-                    <a class="nav-link" routerLink="plugin/list">Plugins</a>
+                    <a class="nav-link" routerLink="plugin/list">Gestion de plugins</a>
                 </li>
                 <li *ngIf="isUser" class="nav-item">
-                    <a class="nav-link" routerLink="pluginUser/list">Plugins</a>
+                    <a class="nav-link" routerLink="pluginUser/list">Mis plugins</a>
                 </li>
             </ul>
             <form class="d-flex me-4">
