--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -25,6 +25,59 @@
                     <a class="nav-link" routerLink="pluginUser/list">Plugins</a>
                 </li>
             </ul>
+            <div class="dropdown" style="margin-right: 25px;">
+                <button class="btn btn-secondary btn-lg " type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fas fa-bell"></i>
+                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                        99+
+                        <span class="visually-hidden">unread messages</span>
+                    </span>
+                </button>
+                <ul class="dropdown-menu overflow-auto" aria-labelledby="dropdownMenuButton1" style="width: 700%; height: 900%;">
+                    <li><h6 class="dropdown-header">Notificaciones</h6></li>
+                    <li>
+                        <div class="card w-100">
+                            <div class="card-body">
+                              <h5 class="card-title">Recordatorio</h5>
+                              <p class="card-text">Info del recordatorio.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="card w-100">
+                            <div class="card-body">
+                              <h5 class="card-title">Recordatorio</h5>
+                              <p class="card-text">Info del recordatorio.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="card w-100">
+                            <div class="card-body">
+                              <h5 class="card-title">Recordatorio</h5>
+                              <p class="card-text">Info del recordatorio.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="card w-100">
+                            <div class="card-body">
+                              <h5 class="card-title">Actividad</h5>
+                              <p class="card-text">Info de la actividad.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="card w-100">
+                            <div class="card-body">
+                              <h5 class="card-title">Actividad</h5>
+                              <p class="card-text">Info de la actividad.</p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+                
+            </div>
             <form class="d-flex me-4">
                 <input class="form-control me-2" type="text" placeholder="...   ">
                 <button class="btn btn-primary" type="button">Buscar</button>
