--- a/frontend/src/app/usuario/editor/add-plugin/add-plugin.component.html
+++ b/frontend/src/app/usuario/editor/add-plugin/add-plugin.component.html
@@ -1,1 +1,37 @@
-<p>add-plugin works!</p>
+<div class="container-fluid py-2 bg-secondary">
+    <div class="row">
+        <div class="col-3">
+            <a class="btn btn-primary btn-block" (click)="backList()">
+                <i class="fas fa-long-arrow-left"></i> Regresar al listado
+            </a>
+        </div>
+    </div>
+</div>
+<div class="container mt-2 col-md-6">
+    <div class="row">
+        <div class="col">
+            <div class="card my-4">
+                <div class="card-header">
+                    <h3>Agregar plugin</h3>
+                </div>
+                <div class="card-body">
+                    <form (ngSubmit)="onSubmit()" #pluginForm="ngForm">
+                        <div class="row py-2">
+                            <div class="form-gruop col-4">
+                                <label for="name">*Nombre del plugin:</label>
+                                <input [(ngModel)]="plugin.nombre" type="text" class="form-control" name="name"
+                                    required #name="ngModel">
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-success mt-2"
+                                [disabled]="!pluginForm.form.valid">Guardar plugin</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<app-modal>{{textInfo}}</app-modal>
