--- a/frontend/src/app/actividad/list-actividad/list-actividad.component.html
+++ b/frontend/src/app/actividad/list-actividad/list-actividad.component.html
@@ -32,7 +32,7 @@
                         <tbody>
                             <tr *ngFor="let a of actividades; let i = index">
                                 <td>{{i+1}}</td>
-                                <td>Test</td>
+                                <td>{{a.proyecto.nombre}}</td>
                                 <td>{{a.titulo}}</td>
                                 <td>{{a.categoria.nombre}}</td>
                                 <td>{{a.fechaInicio}}</td>
