--- a/frontend/src/app/usuario/editor/add-plugin/add-plugin.component.html
+++ b/frontend/src/app/usuario/editor/add-plugin/add-plugin.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 </div>
-<div class="container mt-2 col-md-6">
+<div class="container mt-2 col-md-4">
     <div class="row">
         <div class="col">
             <div class="card my-4">
@@ -17,7 +17,7 @@
                 <div class="card-body">
                     <form (ngSubmit)="onSubmit()" #pluginForm="ngForm">
                         <div class="row py-2">
-                            <div class="form-gruop col-4">
+                            <div class="form-gruop col">
                                 <label for="name">*Nombre del plugin:</label>
                                 <input [(ngModel)]="plugin.nombre" type="text" class="form-control" name="name"
                                     required #name="ngModel">
