Componenetes anteriores de calendario eliminados, color de texto en fase lunar cambiado

--- a/frontend/src/app/calendar/calendar.component.css
+++ b/frontend/src/app/calendar/calendar.component.css
@@ -20,7 +20,7 @@ td {
 	display: table;
 	margin:20px auto;
 	text-align: center;
-	color:black;
+	color:white;
 	/* border: 1px solid black; */
 	padding: 5px 30px;
 }
