Empezando implementacion notificaciones

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -26,7 +26,7 @@
                 </li>
             </ul>
             <div class="dropdown" style="margin-right: 25px;">
-                <button (click)="updateNotificaciones()" class="btn btn-secondary btn-lg " type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="btn btn-secondary btn-lg " type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="fas fa-bell"></i>
                     <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                         {{recordatorios.length}}
