--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -26,22 +26,21 @@
                 </li>
             </ul>
             <div class="dropdown" style="margin-right: 25px;">
-                <button class="btn btn-secondary btn-lg " type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                <button (click)="updateNotificaciones()" class="btn btn-secondary btn-lg " type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="fas fa-bell"></i>
                     <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                        {{recordatorios.length}}
+                        {{notificaciones.length}}
                         <span class="visually-hidden">unread messages</span>
                     </span>
                 </button>
                 <ul class="dropdown-menu overflow-auto" aria-labelledby="dropdownMenuButton1" style="width: 700%; height: 900%;">
                     <li><h6 class="dropdown-header">Notificaciones</h6></li>
                     <li>
-                        <div *ngFor="let rec of recordatorios" class="card w-100">
+                        <div *ngFor="let not of notificaciones" class="card w-100">
                             <div class="card-body">
-                              <h5 class="card-title">{{rec.titulo}}</h5>
-                              <h6 class="card-title text-primary">{{rec.fecha}}</h6>
-                              <p class="card-text">{{rec.descripcion}}.</p>
-                              <h6 class="card-title text-success">Recordatorio</h6>
+                              <h5 class="card-title">{{not.titulo}}</h5>
+                              <h6 class="card-title text-primary">{{not.fechaHora}}</h6>
+                              <p class="card-text">{{not.descripcion}}.</p>
                             </div>
                         </div>
                     </li>
