--- a/frontend/src/app/txt-edit/txt-edit.component.html
+++ b/frontend/src/app/txt-edit/txt-edit.component.html
@@ -8,7 +8,7 @@
 
 <br>
     <div class="NgxEditor__Wrapper">
-        <ngx-editor-menu [editor]="editor" [toolbar]="toolbar"> </ngx-editor-menu>
+        <ngx-editor-menu [editor]="editor" [toolbar]="toolbar" style="color: black;"> </ngx-editor-menu>
         <ngx-editor
           [editor]="editor"
           [(ngModel)]="html"
