--- a/frontend/src/app/calendar/calendar.component.css
+++ b/frontend/src/app/calendar/calendar.component.css
@@ -1,3 +1,8 @@
+#label {
+	color: #F1C40F;
+	font-size: 64px;
+}
+
 .calendar .cal-frame td.today {
 	background:#DC7633;
 }
@@ -20,7 +25,7 @@ td {
 	display: table;
 	margin:20px auto;
 	text-align: center;
-	color:white;
+	color: #FBFCFC;
 	/* border: 1px solid black; */
 	padding: 5px 30px;
 }
@@ -28,4 +33,8 @@ td {
 #ex1 [shadow]{
 	filter:drop-shadow(0 0 25px rgb(0,50,50));
 	padding:15px 0;
+}
+
+#day-number {
+	color: #ECF0F1;
 }
