--- a/frontend/src/app/modal-calendario/modal-calendario.component.html
+++ b/frontend/src/app/modal-calendario/modal-calendario.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="modalActividad" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="modalActividad" data-bs-backdrop="static" data-bs-keyboard="true" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
