Crud de post funcional

--- a/frontend/src/app/txt-edit/txt-edit.component.html
+++ b/frontend/src/app/txt-edit/txt-edit.component.html
@@ -1,31 +1,32 @@
-
 <!--form (ngSubmit)="onSubmit()"-->
 
 <div class="input-group input-group-lg">
-  <span class="input-group-text" id="inputGroup-sizing-lg">Titulo</span>
-  <input type="text"  id="title_" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" (keyup)="onKey($event)">
+    <span class="input-group-text" id="inputGroup-sizing-lg">Titulo</span>
+    <input type="text" id="title_" class="form-control" aria-label="Sizing example input"
+        aria-describedby="inputGroup-sizing-lg" (keyup)="onKey($event)"
+        [(ngModel)]="post.titulo">
 </div>
 
 <br>
-    <div class="NgxEditor__Wrapper">
-        <ngx-editor-menu [editor]="editor" [toolbar]="toolbar"> </ngx-editor-menu>
-        <ngx-editor
-          [editor]="editor"
-          [(ngModel)]="html"
-          [disabled]="false"
-          [placeholder]="'Publicaciones...'"
-        ></ngx-editor>
-      </div>
-      <br>
+<div class="NgxEditor__Wrapper">
+    <ngx-editor-menu [editor]="editor" [toolbar]="toolbar"> </ngx-editor-menu>
+    <ngx-editor
+        [editor]="editor"
+        [(ngModel)]="html"
+        [disabled]="false"
+        [placeholder]="'Publicaciones...'">
+    </ngx-editor>
+</div>
+<br>
 
-      <button *ngIf="isUser" type="button" (click)="sendData()" class="btn btn-primary">Publicar</button>
-      <button *ngIf="isEditor" type="button" (click)="addPost()" class="btn btn-primary">Agregar post</button>
-
-
+<button *ngIf="isUser" type="button" (click)="sendData()" class="btn btn-primary">Publicar</button>
+<button *ngIf="isEditor && !isUser" type="button" (click)="addPost()" class="btn btn-primary">Guardar post</button>
 
 
-      <div class="container">
 
 
-    </div>
-    <!--/form-->
+<div class="container">
+
+
+</div>
+<!--/form-->
