--- a/frontend/src/app/usuario/editor/list-post/list-post.component.html
+++ b/frontend/src/app/usuario/editor/list-post/list-post.component.html
@@ -23,7 +23,7 @@
                             <tr>
                                 <th>#</th>
                                 <th>Titulo</th>
-                                <th>Fecha</th>
+                                <th>Fecha de publicaccion</th>
                                 <th></th>
                         </thead>
                         <tbody>
@@ -38,8 +38,8 @@
                                     <button (click)="delete(p)" class="btn btn-danger">
                                         <i class="fas fa-trash-alt"></i> Eliminar
                                     </button>&nbsp;
-                                    <button class="btn btn-info">
-                                        <i class="fas fa-eye"></i> Ver contenido
+                                    <button (click)="verPost(p)" class="btn btn-info">
+                                        <i class="fas fa-eye"></i> Ver como usuario
                                     </button>
                                 </td>
                             </tr>
