listado de personas que el usuario actual sigue

--- a/frontend/src/app/comentario/comentario.component.html
+++ b/frontend/src/app/comentario/comentario.component.html
@@ -23,12 +23,12 @@
 
         <div class="card text-center" >
             <div class="card-header" >
-                    {{u.usuario.nombre}}
+                    {{u.usuario.username}}
          </div>
          <div class="card-body">
             <h5 class="card-title" ></h5>
             <p class="card-text" >{{u.contenido}} </p>
-            Cargando Comentarios
+            
         </div>
     </div>
 
