--- a/frontend/src/app/usuario/perfil/contact/contact.component.html
+++ b/frontend/src/app/usuario/perfil/contact/contact.component.html
@@ -3,9 +3,9 @@
       Sigo a ...
     </div>
     <div class="card-body">
-      <blockquote class="blockquote mb-0" >
-        <p>A well-known quote, contained in a blockquote element.</p>
-        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+      <blockquote class="blockquote mb-0" *ngFor="let u of lstSeguidor" >
+        <a (click)="showPerfil(u)" class="btn btn-primary">{{u}}</a>
+        <footer class="blockquote-footer"><cite title="Source Title"></cite></footer>
       </blockquote>
     </div>
   </div>
