--- a/frontend/src/app/usuario/perfil/visitante/visitante.component.html
+++ b/frontend/src/app/usuario/perfil/visitante/visitante.component.html
@@ -71,7 +71,7 @@
     </div>
 </div>
 <div class="col-6 scroll"><br>
-    <app-list-publicacion></app-list-publicacion> 
+    <app-list-publicacion [username]="username" ></app-list-publicacion> 
 </div>
 
 </div>
