--- a/frontend/src/app/usuario/list-solicitudes/list-solicitudes.component.html
+++ b/frontend/src/app/usuario/list-solicitudes/list-solicitudes.component.html
@@ -24,6 +24,9 @@
                                 <td>
                                     <button (click)="aceptar(s)" class="btn btn-success">
                                         <i class="fas fa-check"></i> Aceptar
+                                    </button>&nbsp;
+                                    <button (click)="rechazar(s)" class="btn btn-danger">
+                                        <i class="fas fa-trash"></i> Rechazar
                                     </button>
                                 </td>
                             </tr>
