--- a/frontend/src/app/usuario/editor/vista-post/vista-post.component.html
+++ b/frontend/src/app/usuario/editor/vista-post/vista-post.component.html
@@ -14,7 +14,7 @@
                 <div class="card-header text-center">
                     <h3>{{post.titulo}}</h3>
                 </div>
-                <div class="card-body container-responsive" [innerHtml]="post.contenido">
+                <div class="card-body" [innerHtml]="post.contenido">
                 </div>
             </div>
         </div>
