Listado de todos los posts de un plugin agregado

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" routerLink="plugin/list">Gestion de plugins</a>
                 </li>
                 <li *ngIf="isUser" class="nav-item">
-                    <a class="nav-link" routerLink="user/misPllugins">Mis plugins</a>
+                    <a class="nav-link" routerLink="user/misPlugins">Mis plugins</a>
                 </li>
             </ul>
             <div class="dropdown" style="margin-right: 25px;">
