--- a/frontend/src/app/usuario/mis-plugins/mis-plugins.component.html
+++ b/frontend/src/app/usuario/mis-plugins/mis-plugins.component.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-3">
             <a class="btn btn-primary btn-block" (click)="add()">
-                <i class="fas fa-plus"></i> Buscar mas plugins
+                <i class="fas fa-search"></i> Buscar mas plugins
             </a>
         </div>
     </div>
