--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -42,7 +42,7 @@
                             <p class="card-text">{{not.descripcion}}.</p>
                         </div>
                     </div>
-                    <li><a (click)="eliminarNotificaciones()" class="dropdown-header" style="text-align: right;">Eliminar todas.</a></li>
+                    <li><a (click)="eliminarNotificaciones()" class="dropdown-header" style="text-align: right;" routerLink>Eliminar todas.</a></li>
                 </ul>
             </div>
             <form class="d-flex me-4">
