Modulos agregados y cambios menores
1. Modulos para Plugin, Post y TextEditor agregados.
2. Correccion de error al cargar listado de proyectos y categorias en nuevos usuarios, se mostraba 'Sin Proyecto' y 'Sin Categoria'.
3. Eliminacion de rutas repetidas en AppRouting.

--- a/frontend/src/app/components/txt-edit/txt-edit.component.html
+++ b/frontend/src/app/components/txt-edit/txt-edit.component.html
@@ -7,16 +7,11 @@
 </div>
 
 <br>
-    <div class="NgxEditor__Wrapper">
-        <ngx-editor-menu [editor]="editor" [toolbar]="toolbar" style="color: black;"> </ngx-editor-menu>
-        <ngx-editor
-          [editor]="editor"
-          [(ngModel)]="html"
-          [disabled]="false"
-          [placeholder]="'Publicaciones...'"
-        ></ngx-editor>
-      </div>
-      <br>
+<div class="NgxEditor__Wrapper">
+    <ngx-editor-menu [editor]="editor" [toolbar]="toolbar" style="color: black;"></ngx-editor-menu>
+    <ngx-editor [editor]="editor" [(ngModel)]="html" [disabled]="false" [placeholder]="'Publicaciones...'"></ngx-editor>
+</div>
+<br>
 
 <div *ngIf="isUser" class="d-grid gap-2 col-6 mx-auto">
     <button type="button" (click)="addPub()" class="btn btn-primary">Publicar</button>
